tests/graph_styles/snapshots/integration__graph_styles__test_octant_columns_2_filled.snap
---
source: tests/graph_styles/mod.rs
expression: stdout
---
  𜷓█▖      ▗█𜷤▂𜷥▙         
 ▗███     ▗███𜵰██𜷀        
 ▟███▌    𜷥███ ▜██𜺣       
𜶿█████   𜶖███▌ 𜺫██▌      ▖
▛█████𜵈  𜷥███   𜶘██     ▗▌
 ▜████▙ 𜶖███𜵊   𜺫██𜵈    ▟▘
 ▝█████▖████▘    ▐█▙   ▗𜵰 
  ▜████████▛      ██▖  ▟𜴍 
  𜺫███𜵰 𜶫██▘      𜴡█▙ 𜷓𜵰  
   ▝𜶫𜵰𜺨 ▝█𜴏        𜴢█𜴳𜵰▘
