tests/graph_styles/snapshots/integration__graph_styles__test_sextant_columns_1_line.snap
---
source: tests/graph_styles/mod.rs
expression: stdout
---
           🬇🬂🬈🬏           
          🬞🬀  🬇           
          🬃    🬀          
🬃        🬇     🬁         🬏
🬇        🬀      🬀       🬞 
 🬃      🬁       🬁🬏      🬏 
 🬇      🬀        🬞     🬇  
  🬀    🬑          🬏    🬃  
  🬁🬏  🬇           🬇   🬑   
   🬁🬢🬖🬀            🬈🬭🬖
